<resources>
    <string name="app_name">ContactList</string>
    <string name="contacts">Contacts</string>
    <string name="add_new_contact">+</string>
    <string name="contact_name">Contact Name</string>
    <string name="delete_contact">-</string>
    <string name="contact_details">Contact Details</string>
    <string name="contact_profile">Contact Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="add_contact">Add Contact</string>
    <string name="relationships">Relationships:</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
