<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacts"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="15sp"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"/>

    <ListView
        android:id="@+id/listview_main_contact_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

    <Button
        android:id="@+id/button_add_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_contact"/>

    <Button
        android:id="@+id/button_delete_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_contact"
        />

</LinearLayout>

