<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/title_contact_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_details"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:paddingTop="10sp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_input_contact_name"
        android:layout_width="match_parent"
        android:layout_height='wrap_content'
        android:textColorHint="@android:color/black"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:layout_below="@id/title_contact_details">

    <EditText
        android:id="@+id/input_contact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contact_name"
        android:textColor="@android:color/black"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_input_contact_number"
        android:layout_width="match_parent"
        android:layout_height='wrap_content'
        android:textColorHint="@android:color/black"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:paddingLeft="5dp"
        android:layout_below="@id/layout_input_contact_name">

    <EditText
        android:id="@+id/input_contact_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:textColor="@android:color/black"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/text_relationships"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relationships"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_below="@id/layout_input_contact_number"/>

    <ListView
        android:id="@+id/listview_relationships"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/text_relationships">

    </ListView>

    <Button
        android:id="@+id/button_confirm_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_contact"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>


</RelativeLayout>