<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kristenwong.contactlist.ContactProfileFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:background="@color/colorBackground">

        <TextView
            android:id="@+id/title_contact_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_profile"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-thin"
            android:layout_marginTop="15sp"/>

        <LinearLayout
            android:id="@+id/contact_profile_underline"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorControlNormal"
            android:orientation="horizontal"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:layout_below="@id/title_contact_details"/>

        <TextView
            android:id="@+id/text_contact_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_name"
            android:textColor="@color/colorControlNormal"
            android:textSize="20sp"
            android:fontFamily="sans-serif-thin"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/contact_profile_underline"/>

        <TextView
            android:id="@+id/text_contact_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="contact name here"
            android:textColor="@color/colorControlActivated"
            android:textSize="17sp"
            android:fontFamily="sans-serif-thin"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/text_contact_name_title"/>

        <TextView
            android:id="@+id/text_contact_phone_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/colorControlNormal"
            android:textSize="20sp"
            android:fontFamily="sans-serif-thin"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/text_contact_name"/>

        <TextView
            android:id="@+id/text_contact_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="contact phone number here"
            android:textColor="@color/colorControlActivated"
            android:textSize="17sp"
            android:fontFamily="sans-serif-thin"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/text_contact_phone_title" />


        <TextView
            android:id="@+id/text_relationships_cp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relationships"
            android:textColor="@color/colorControlNormal"
            android:textSize="20sp"
            android:fontFamily="sans-serif-thin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_below="@id/text_contact_phone"/>


        <ListView
            android:id="@+id/listview_relationships_cp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:divider="@color/colorAccent"
            android:dividerHeight="1dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_below="@id/text_relationships_cp">

        </ListView>

    </RelativeLayout>

</FrameLayout>
